# elder

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  elder.cpp  print.cpp  tictac.cpp
include/engine/: components.h  ecs.h  generational_index.h  packed_array.h  resources.h  type_map.h
scripts/: build.sh  configure.sh  debug.sh  release.sh  test.sh
src/: CMakeLists.txt  ecs.cpp  generational_index.cpp  resources.cpp
tests/: CMakeLists.txt  ecs.cpp  generational_index.cpp  test_generational_index.cpp  testlib.cpp
